# smolpuff

./: .env.example  Cargo.toml  README.md  docker-compose.yml
.githooks/: pre-commit
.github/workflows/: ci.yml
benches/: vector_store.rs
monitoring/: prometheus.yml
monitoring/provisioning/dashboards/: smolpuff.json
src/: errors.rs  handlers.rs  lib.rs  main.rs  metrics.rs  models.rs  store.rs
src/index/: builder.rs  kmeans.rs  manager.rs  mod.rs  posting.rs
tests/: integration.rs
