[package]
name = "smolpuff"
version = "0.1.0"
edition = "2024"

[dependencies]
object_store = { version = "0.12.4", features = ["aws", "azure"] }
slatedb = { version = "0.9.2", default-features = false }
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"

[dev-dependencies]
criterion = { version = "0.5", features = ["async_tokio"] }
rand = "0.8"

[[bench]]
name = "vector_store"
harness = false
