[package]
name = "smolpuff"
version = "0.1.0"
edition = "2024"

[dependencies]
object_store = { version = "0.12.4", features = ["aws", "azure"] }
slatedb = { version = "0.9.2", default-features = false }
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
axum = "0.8"
tower-http = { version = "0.6", features = ["trace"] }
tracing = "0.1"
tracing-subscriber = "0.3"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive"] }

[dependencies.rand]
version = "0.8"

[dependencies.reqwest]
version = "0.12"
features = ["json"]

[dev-dependencies]
criterion = { version = "0.5", features = ["async_tokio"] }
tokio-test = "0.4"

[[bench]]
name = "vector_store"
harness = false
